# SignalDesk_AI

./: .env.example  .gitignore  README.md  _test_e2e.py  pyproject.toml
.claude/: AGENT.md  CLAUDE.md  Roadmap.md  settings.local.json
config/sources/: sample_industry_site.json
docs/: engineering-maturity-assessment.md  session-record-2026-05-17.md
plan/: 01-product-prd.md  02-system-architecture.md  03-folder-structure.md  04-api-and-mcp.md  05-execution-roadmap.md  06-resume-highlights.md  README.md
plan/course/: README.md  phase-01-foundation.md  phase-02-crawling-and-structuring.md  phase-03-rag-and-indexing.md  phase-04-api-and-mcp.md  phase-05-reporting-and-hardening.md  phase-checklist.md
src/intel_analyst/: __init__.py  main.py
src/intel_analyst/api/: dependencies.py  router.py
src/intel_analyst/core/: config.py  logging.py
src/intel_analyst/crawlers/: auth.py  base.py  generic_news.py  source_loader.py
src/intel_analyst/mcp/: server.py
src/intel_analyst/processing/: html_tables.py
src/intel_analyst/rag/: embeddings.py  llm.py  prompts.py  vector_store.py
src/intel_analyst/schemas/: article.py  crawl.py  query.py  report.py  source.py
src/intel_analyst/services/: crawler_service.py  ingestion_service.py  (+3 more)
tests/: _download_embeddings.py  _test_cache.py  _test_query.py  test_article_repository.py  test_health_api.py  test_html_tables.py
web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: intelligence-workbench.tsx
web/lib/: backend.ts
(+12 files in other folders)
