[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "smart-industry-intelligence-analyst"
version = "0.1.0"
description = "An industry intelligence analyst backend built with FastAPI, LangChain, RAG, and MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0.0",
  "chromadb>=0.5.5,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-chroma>=0.1.4,<0.3.0",
  "langchain-huggingface>=0.1.2,<0.2.0",
  "langchain-ollama>=0.2.0,<0.3.0",
  "langchain-openai>=0.2.0,<0.3.0",
  "langchain-text-splitters>=0.3.0,<0.4.0",
  "lxml>=5.3.0,<6.0.0",
  "mcp>=1.2.0,<2.0.0",
  "pandas>=2.2.3,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "requests>=2.32.3,<3.0.0",
  "selenium>=4.25.0,<5.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intel_analyst"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
